# uav_image_stitching

./: CMakeLists.txt  Circle.cpp  Circle.h  ImageSimulator.cpp  ImageSimulator.h  README.md  aanap.cpp  aanap.h  compute_weight.cpp  compute_weight.h  homography_warp.cpp  homography_warp.h  license_imaging_platform.txt  main.cpp  main_old.cpp  param.h  pipeline.cpp  pipeline.h  samplePoint.cpp  samplePoint.h  seamcut.cpp  seamcut.h  stdafx.cpp  stdafx.h  texton.txt
